--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 */
  .body_text {
     font-size:12px;
-    
-        
+}
+.body {
+    background-image:url('assets/backgroung name goes here .JPG')
 }
