--- a/styles.css
+++ b/styles.css
@@ -10,5 +10,5 @@
     font-size:12px;
 }
 body {
-    background-image:url('assets/backgroung name goes here .JPG')
+    background-image: url("assets/background.jpg");
 }
