--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,13 @@
 body {
     background-image: url("assets/background.jpg");
 }
+
+.text_show {
+    background-color: rgba(255,255,255,0.5);
+    text-indent:50px
+}
+
+.hide {
+    color: rgba(0,0,0,0);
+    background-color: rgba(0,0,0,0);
+}
