--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,15 @@ body {
     color: rgba(0,0,0,0);
     background-color: rgba(0,0,0,0);
 }
+
+.align_left {
+    display:block;
+    text-align:left;
+    width:100%;
+}
+
+.align_right {
+    display:block;
+    text-align:right;
+    width:100%;
+}
