--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ body {
 	background-size:80px 80px;
 }
 
+table {
+	width:100%;
+}
+
 .text_show {
     background-color: rgba(255,255,255,0.5);
     text-indent:50px
@@ -25,13 +29,14 @@ body {
 }
 
 .align_left {
-    display:block;
     text-align:left;
-    width:100%;
 }
 
 .align_right {
-    display:block;
     text-align:right;
-    width:100%;
+}
+
+.bottom {
+	position:absolute;
+	bottom:0px;
 }
