--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,8 @@ body {
     text-align:right;
 }
 .bottom {
-    position:absolute;
-    bottom:0px;
+    position:fixed;
+    bottom:0%;
 }
 html {
     overflow-y: hidden;
