--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ a {
 }
 .table_boarder_v2 {
     border-style:solid;
-    border-color:;
+    border-color:#000 #000;
 }
 .bottom_text{
 vertical-align:text-bottom;
