make things load faster

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     font-size:12px;
 }
 body {
-    background-image: url("assets/background.jpg");
+    background-image: url("assets/backgroundsmall.jpg");
     background-size:80px 80px;
 }
 .widescreen {
