final project due soon, lets get up to date!

--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,8 @@ vertical-align:text-bottom;
     border-style:solid;
     border-color:#221e11 #221e11;
 }
-select {
-
+.row_1{
+    position:absolute;
+    top:50px;
+    right:100px;
 }
